# plasmidhunter

./: README.md  final_result.json
api/: .env  Cargo.toml  api_test.http  test.json  test2.json  test3.json
api/src/: api_handler.rs  api_model.rs  api_structs.rs  main.rs  s3_helper.rs
api/src/argo/: client.rs  structs.rs  urls.rs
backendscripts/: tsv_to_json.py
webui/: README.md  baktadummy.json  final_result.json  index.html  jsconfig.json  metadummy.json  metagenome_testset.json  package-lock.json  package.json  plasmid.fna  result.json  test.json  vite.config.js
webui/public/: config.json
webui/src/: App.vue  configloader.ts  main.js  router.js
webui/src/assets/: ResultInterface.ts
webui/src/components/: Footer.vue  HistogramComponent.vue  IgvViewer.vue  MapComponent.vue  Navi.vue  NewTimelineComponent.vue  TimelineComponent.vue  timelinetest.vue
webui/src/graph/: axis.js  cursor.js  events.js  layout.js  timeline.js  timelinevue.vue  zoom.js
webui/src/helpers/: Interface.ts  ResultInterface.ts  fetch_helper.ts  storagehelper.ts
webui/src/pages/: AboutView.vue  HomeView.vue  JobView.vue  JobsView.vue  NotFound.vue
