[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
#server
axum = "0.7.5"
tokio = {version = "1.36.0", features = ["full"] }

#serde 
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

uuid = { version = "1.3.0", features = ["v4", "serde"]}

rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }