[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
#server
axum = "0.7.5"
tokio = {version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"]}
reqwest = {version = "0.12.5", features = ["json"] }

#serde 
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

uuid = { version = "1.3.0", features = ["v4", "serde"]}

rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
anyhow = "1.0"

#s3
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.54.0"